Prevented scrollbars on code blocks

--- a/_sass/components/_code.scss
+++ b/_sass/components/_code.scss
@@ -5,6 +5,7 @@
   @include vertical-rhythm;
   background: $dark-background;
   color: white;
+  font-size: .9em;
 
   > pre {
     margin-top: 0;
